# Math-optimization

./: CMakeLists.txt  README.md  run.py
lib/: CMakeLists.txt
lib/beam/: CMakeLists.txt
lib/beam/include/: beam.h
lib/extra/: CMakeLists.txt
lib/extra/include/: iterator.h  utils.h
lib/mathlib/: CMakeLists.txt
lib/mathlib/include/: mathlib.h
lib/mathlib/src/: mathlib.cpp
main/: CMakeLists.txt  console.cpp  main.cpp  test.cpp
src/benchmark/: benchmark.cpp
src/main/: CMakeLists.txt  main.cpp
src/mathlib/: mathlib.cpp  mathlib.h
